	  will no longer be kept, use an empty Separator line instead.
	- Added multimedia.sty for movie and sound inclusion.
	- Added evil autobreak option to frames for automatic frame breaking.
	- Added evil shrink option for automatic frame text shrinking.
	- Added squeeze option to frames for squeezing more on a frame.
	- Added \framesubtitle command.
	- Added \subtitle command.
	- Added option nopdfinfo to suppress automatic generation of
	  author and title entries in pdf document info.
	- Added \subject command.
	- Added \framezoom command.
	- Fixed definition of overlayarea to give better spacing.
	- Fixed problem with persisting background color and dvips.
	- Fixed typos in the user's guide spotted by Xavier Noria and Uwe Stoer.
	- Fixed unrobust definition of \\.
	- FoilTeX emulation will now do automatic page breaking.

2004-04-07 Till Tantau <tantau@users.sourceforge.net>

	Version 2.11
	- Added t, b, c options to \frame.
	- Fixed esoteric bug in beamerbaseoptions.
	- Fixed problem with \againframe and counters.
	- Added (small part of) texpower emulation and foils emulation.
	- Changed the examples for emulation of prosper. 
	- Now works with xcolor 1.10 (and only 1.10).
	- Fixed a PostScript related problems in bibliographies.
	- Fixed lyx default template.
	- Fixed bug that caused option CJK to be broken (though cjk
	worked).
	- Added inserts for section numbers for navigation bars.
	- Fixed problem with spacing inside itemize after equations.

2004-03-10 Till Tantau <tantau@users.sourceforge.net>

	Version 2.10
	- Fixed some spacing problems in uncover and invisible, itemize
	  and pause.
	- Moved head/footline calculation after beginning of document.
	  This fixes all sorts of problems.
	- Added utf8 encoding support.
	- Added a (HA-)Prosper emulation layer. 
	- Added a seminar emulation layer.
	- Added third level of itemize/enumerate nesting (I don't like it,
	  but some people do).
	- Added the \onslide command for use outside overprint