@@ -6,3 +6,4 @@
  5) Better color management.
  6) Add miniframes and list of frames.
  7) Make section and subsections breakable in sidebars.
+ 8) Add options for showing only part of the TOC in sidebars.
