@@ -9,10 +9,11 @@
 	- Added squeeze option to frames for squeezing more on a frame.
 	- Added \framesubtitle command.
 	- Added \subtitle command.
+	- Added \subject command.
 	- Added option nopdfinfo to suppress automatic generation of
 	  author and title entries in pdf document info.
-	- Added \subject command.
 	- Added \framezoom command.
+	- Added new version of beamer.el, due to Thomas Baumann.
 	- Fixed definition of overlayarea to give better spacing.
 	- Fixed problem with persisting background color and dvips.
 	- Fixed typos in the user's guide spotted by Xavier Noria and Uwe Stoer.
